# simple-bot

./: .env.dist  .gitignore  Dockerfile  README.MD  alembic.ini  bot.py  docker-compose.yml  grafana.ini  pyproject.toml  requirements.txt
infrastructure/database/: setup.py
infrastructure/database/models/: __init__.py  base.py  users.py
infrastructure/database/repo/: groups.py  requests.py  users.py
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 10cbfa0dc60a_initial.py
tgbot/: config.py
tgbot/dialogs/broadcast/: __init__.py  funcs.py  states.py  windows.py
tgbot/dialogs/profile/: __init__.py  getters.py  states.py  windows.py
tgbot/dialogs/profile/selected/: commands.py  other_type.py  profile.py  when.py
tgbot/filters/: admin.py
tgbot/handlers/: __init__.py  admin.py  echo.py  groups.py  user.py
tgbot/middlewares/: database.py
tgbot/services/: broadcaster.py  construct_markup.py
