[tool.poetry]
name = "simple-bot"
version = "0.1.0"
description = "Simple bot with base functions"
authors = ["paracosm17"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
aiogram = "^3.2.0"
environs = "^9.5.0"
redis = "^5.0.1"
betterlogging = "^0.2.1"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.23"
aiogram-dialog = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
